@@ -32,7 +32,7 @@
 
 <p>Duro D/T is an interpreter which supports accessing and updating DuroDBMS databases.
 Being computationally complete, it can be used to write database applications.
-The language is very close to the Tutorial D language proposed by C. J. Date an Hugh Darwen
+The language is very close to the Tutorial D language proposed by C. J. Date and Hugh Darwen
 in their book <em>The Third Manifesto</em> (<cite>TTM</cite>).
 
 <p>Consult <a href="http://www.thethirdmanifesto.com/">The Third Manifesto website</a>
