@@ -33,6 +33,7 @@ RDB_EXTERN_VAR RDB_type RDB_INVALID_ARGUMENT_ERROR;
 RDB_EXTERN_VAR RDB_type RDB_TYPE_MISMATCH_ERROR;
 RDB_EXTERN_VAR RDB_type RDB_NOT_FOUND_ERROR;
 RDB_EXTERN_VAR RDB_type RDB_OPERATOR_NOT_FOUND_ERROR;
+RDB_EXTERN_VAR RDB_type RDB_TYPE_NOT_FOUND_ERROR;
 RDB_EXTERN_VAR RDB_type RDB_NAME_ERROR;
 RDB_EXTERN_VAR RDB_type RDB_ELEMENT_EXISTS_ERROR;
 RDB_EXTERN_VAR RDB_type RDB_TYPE_CONSTRAINT_VIOLATION_ERROR;
