@@ -63,6 +63,9 @@ RDB_object *
 RDB_raise_operator_not_found(const char *, RDB_exec_context *);
 
 RDB_object *
+RDB_raise_type_not_found(const char *, RDB_exec_context *);
+
+RDB_object *
 RDB_raise_type_constraint_violation(const char *, RDB_exec_context *);
 
 RDB_object *
